# pp_2020_spring

./: .gitignore  .travis.yml  README.md  appveyor.yml
modules/reports/andronov_m_monte_carlo_integration/: monte_carlo_integration.tex
modules/reports/antipin_a_sparse_matrix/: sparse_matrix.tex
modules/reports/astafeva_i_trapezoidal_rule/: trapezoidal_rule.tex
modules/reports/bandenkov_d_shell_batcher_sort/: report_shell_batch.tex
modules/reports/bykovskaya_a_simpson_method/: simpson_method.tex
modules/reports/denisov_v_monte_karlo/: monte_karlo.tex
modules/reports/fedotov_v_integrals_rectangle/: fedotov_v_integrals_rectangle_report.tex
modules/reports/golovanova_e_sobel/: report.tex
modules/reports/iamshchikov_i_sparse_matrix_mult/: sparse_matrix_mult.tex
modules/reports/isaev_i_fox_algorithm/: isaev_i_fox_algorithm.tex
modules/reports/karin_sparce_matrix_complex_CCS/: sparce_matrix.tex
modules/reports/khruleva_a_radix_batcher_sort/: khruleva_a_radix_batcher_sort.tex
modules/reports/konnov_s_radix_sort_odd_even_merge_double/: CMakeLists.txt  konnov_s_radix_sort_odd_even_merge_double_report.tex
modules/reports/kornev_n_qs/: qs_report.tex
modules/reports/korobeinikov_a_quick_sort/: quick_sort.tex
modules/reports/kriukov_d_strassen/: strassen_algorithm.tex
modules/reports/kukushkina_k_report/: segmentation_report.tex
modules/reports/maximova_i_dijkstra_algorithm/: dijkstra_algorithm.tex
modules/task_1/Yakovlev_Pavel_Jarvis_algorithm/: CMakeLists.txt  Jarvis_algorithm.cpp  Jarvis_algorithm.h  main.cpp
modules/task_1/kornev_n_qs/: qs.cpp  (+2 more)
(+773 files in other folders)
